optimize getVoltageLevelEquipments and clean code
Signed-off-by: Etienne LESOT <etienne.lesot@rte-france.com>